--- a/web/CSS/stylesheet.css
+++ b/web/CSS/stylesheet.css
@@ -110,8 +110,167 @@ i {
     left: -25px;
 }
 
+#container{
+    text-align: center;
+    width: 350px;
+    height: 200px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -100px 0 0 -175px;
+}
+/*admin*/
 
+label{
+    width: 30%;
+}
+textarea {
+    width: 30%;
+}
+.modal-footer{
+    align-items:center;
+    text-align:center;
+    justify-content: center;
+    position: center;
+}
+.form-control{
+    width:30%;
+    text-align: center;
+}
+h1,h2,h3{
+    text-align: center;
+}
+.titolo{
+    text-align:center;
+    display: block;
+    width: 30%;
+}
+.lista-group li{
+    align-items:center;
+    text-align:center;
+    justify-content: center;
+    width: 30%;
+    margin:0 auto;
+    padding:0;
+    position: center;
+}
+div[class*=box] {
+    margin: 0 auto;
+    height: 33.33%;
+    width: 10%;
+    display: flex;
+    display: inline-block;
+    text-align: center;
+    justify-content: center;
+    align-items:center;
+    position: center;
+    margin-right: 0.3%;
+    margin-bottom: 0.3%;
+}
+/*
+========================
+      BUTTON ONE
+========================
+*/
+.box-1 { background-color: #FF6766;
+    alignment: center;
 
+}
+
+.btn-one {
+    alignment: center;
+    color: #FFF;
+    transition: all 0.3s;
+    position: relative;
+}
+.btn-one span {
+    transition: all 0.3s;
+}
+.btn-one::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0;
+    transition: all 0.3s;
+    border-top-width: 1px;
+    border-bottom-width: 1px;
+    border-top-style: solid;
+    border-bottom-style: solid;
+    border-top-color: rgba(255,255,255,0.5);
+    border-bottom-color: rgba(255,255,255,0.5);
+    transform: scale(0.1, 1);
+}
+.btn-one:hover span {
+    letter-spacing: 2px;
+}
+.btn-one:hover::before {
+    opacity: 1;
+    transform: scale(1, 1);
+}
+.btn-one::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    transition: all 0.3s;
+    background-color: rgba(255,255,255,0.1);
+}
+.btn-one:hover::after {
+    opacity: 0;
+    transform: scale(0.1, 1);
+}
+
+/*
+========================
+      BUTTON THREE
+========================
+*/
+.box-3 { background-color: #66A182;
+}
+.btn-three {
+    color: #FFF;
+    transition: all 0.5s;
+    position: relative;
+}
+.btn-three::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: rgba(255,255,255,0.1);
+    transition: all 0.3s;
+}
+.btn-three:hover::before {
+    opacity: 0 ;
+    transform: scale(0.5,0.5);
+}
+.btn-three::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0;
+    transition: all 0.3s;
+    border: 1px solid rgba(255,255,255,0.5);
+    transform: scale(1.2,1.2);
+}
+.btn-three:hover::after {
+    opacity: 1;
+    transform: scale(1,1);
+}
 
 @media (max-width: 991px){
     #navbarSupportedContent ul li a{
