--- a/web/CSS/stylesheetLog.css
+++ b/web/CSS/stylesheetLog.css
@@ -222,7 +222,7 @@ h2.active {
 
 /* FORM TYPOGRAPHY*/
 
-input[type=button], input[type=submit], input[type=reset]  {
+input[type=submit]{
     background-color: #56baed;
     border: none;
     color: white;
