--- a/web/CSS/stylesheet.css
+++ b/web/CSS/stylesheet.css
@@ -164,7 +164,7 @@ div[class="col l7 s12"]{
 
 /*jumbotron*/
 .jumbotron-image {
-    background-image: url("../img/imageedit_1_5937227047.png");
+    background-image: url("../img/marvin-meyer-SYTO3xs06fU-unsplash (1).jpg");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
