--- a/web/CSS/stylesheetAdmin.css
+++ b/web/CSS/stylesheetAdmin.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 /************/
 .table-editable{
-    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-size:24px;
+    font-family: 'Roboto', sans-serif;
     color: white;
 }
 .card{
@@ -8,29 +10,32 @@
     height: auto;
     margin-top: 2%;
 }
+#id_docente1{
+    margin-top: 1%;
+}
 .pt-3-half{
     font-size:24px;
     color: #0d0d0d;
 }
-#inserisci, inserisci2, inserisci3, inserisci4{
+#inserisci{
     font-size:24px;
     color: #0d0d0d;
-    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 #inserisci2{
     font-size:24px;
     color: #0d0d0d;
-    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 #inserisci3{
     font-size:24px;
     color: #0d0d0d;
-    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 #inserisci4{
     font-size:24px;
     color: #0d0d0d;
-    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 .jumbotron-image {
     background-image: url("../img/istockphoto-502131388-170667a.jpg");
@@ -39,16 +44,16 @@
     background-size: cover;
 }
 #add{
-    margin-top: 0.5%;
-    margin-bottom: 0.5%;
+    margin-top: 1%;
+    margin-bottom: 1%;
 }
 #add2{
-    margin-top: 0.5%;
-    margin-bottom: 0.5%;
+    margin-top: 1%;
+    margin-bottom: 1%;
 }
 #add3{
-    margin-top: 0.5%;
-    margin-bottom: 0.5%;
+    margin-top: 1%;
+    margin-bottom: 1%;
 }
 #listacorsi{
     text-align: center;
@@ -83,4 +88,155 @@ h1,h2,h3{
     text-align:center;
     display: block;
     width: 30%;
+}
+/****navbar****/
+div[class="col l7 s12"]{
+    text-align: center;
+    position: center ;
+    color:white;
+    font-family: "Font Awesome 5 Free";
+
+}
+.site-footer {
+    /*background-color: #5161ce;*/
+    background-position: bottom;
+    position: relative;
+    color:white;
+    font-family: "Font Awesome 5 Free";
+}
+
+.immagine-footer{
+    margin-top: 15px;
+}
+
+.navbar-logo{
+    padding: 15px;
+    color: #fff;
+}
+.navbar-mainbg{
+    background-color: #5161ce;
+    padding: 0px;
+}
+#navbarSupportedContent{
+    overflow: hidden;
+    position: relative;
+}
+#navbarSupportedContent ul{
+    padding: 0px;
+    margin: 0px;
+}
+#navbarSupportedContent ul li a i{
+    margin-right: 10px;
+}
+#navbarSupportedContent li {
+    list-style-type: none;
+    float: left;
+}
+#navbarSupportedContent ul li a{
+    color: rgba(255,255,255,0.5);
+    text-decoration: none;
+    font-size: 15px;
+    display: block;
+    padding: 20px 20px;
+    transition-duration:0.6s;
+    transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    position: relative;
+}
+#navbarSupportedContent>ul>li.active>a{
+    color: #5161ce;
+    background-color: transparent;
+    transition: all 0.7s;
+}
+#navbarSupportedContent a:not(:only-child):after {
+    content: "\f105";
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    font-size: 14px;
+    font-family: "Font Awesome 5 Free";
+    display: inline-block;
+    padding-right: 3px;
+    vertical-align: middle;
+    font-weight: 900;
+    transition: 0.5s;
+}
+#navbarSupportedContent .active>a:not(:only-child):after {
+    transform: rotate(90deg);
+}
+.hori-selector{
+    display:inline-block;
+    position:absolute;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    transition-duration:0.6s;
+    transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    background-color: #fff;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    margin-top: 10px;
+}
+.hori-selector .right,
+.hori-selector .left{
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    background-color: #fff;
+    bottom: 10px;
+}
+.hori-selector .right{
+    right: -25px;
+}
+.hori-selector .left{
+    left: -25px;
+}
+.hori-selector .right:before,
+.hori-selector .left:before{
+    content: '';
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #5161ce;
+}
+.hori-selector .right:before{
+    bottom: 0;
+    right: -25px;
+}
+.hori-selector .left:before{
+    bottom: 0;
+    left: -25px;
+}
+
+@media (max-width: 991px){
+    #navbarSupportedContent ul li a{
+        padding: 12px 30px;
+    }
+    .hori-selector{
+        margin-top: 0px;
+        margin-left: 10px;
+        border-radius: 0;
+        border-top-left-radius: 25px;
+        border-bottom-left-radius: 25px;
+    }
+    .hori-selector .left,
+    .hori-selector .right{
+        right: 10px;
+    }
+    .hori-selector .left{
+        top: -25px;
+        left: auto;
+    }
+    .hori-selector .right{
+        bottom: -25px;
+    }
+    .hori-selector .left:before{
+        left: -25px;
+        top: -25px;
+    }
+    .hori-selector .right:before{
+        bottom: -25px;
+        left: -25px;
+    }
+
 }
