--- a/web/CSS/stylesheetPren.css
+++ b/web/CSS/stylesheetPren.css
@@ -1,12 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
-body{
-    font-family: 'Roboto', sans-serif;
-}
-* {
-    margin: 0;
-    padding: 0;
-}
 i {
     margin-right: 10px;
 }
@@ -84,6 +77,7 @@ div[class="col l7 s12"]{
 #navbarSupportedContent .active>a:not(:only-child):after {
     transform: rotate(90deg);
 }
+
 .hori-selector{
     display:inline-block;
     position:absolute;
@@ -162,33 +156,139 @@ div[class="col l7 s12"]{
 
 }
 
-/*jumbotron*/
-.jumbotron-image {
-    background-image: url("../img/marvin-meyer-SYTO3xs06fU-unsplash (1).jpg");
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
+#graduate{
+    width:6.5%;
 }
 
-#gratis{
-    color: 	#87CEFA;
+/*STEP FORM*/
+
+body {
+    padding: 0;
+    margin: 0;
+    background-color: #fff;
+    font-family: 'Roboto', sans-serif;
+}
+.step-wrapper {
+    padding: 20px 0;
+    display: none;
+}
+.step-wrapper.active {
+    display: block;
+}
+.step-indicator {
+    border-collapse: separate;
+    display: table;
+    margin-left: 0px;
+    position: relative;
+    table-layout: fixed;
+    text-align: center;
+    vertical-align: middle;
+    padding-left: 0;
+    padding-top: 20px;
+}
+.step-indicator li {
+    display: table-cell;
+    position: relative;
+    float: none;
+    padding: 0;
+    width: 1%;
+}
+.step-indicator li:after {
+    background-color: #ccc;
+    content: "";
+    display: block;
+    height: 1px;
+    position: absolute;
+    width: 100%;
+    top: 32px;
+}
+.step-indicator li:after {
+    left: 50%;
+}
+.step-indicator li:last-child:after {
+    display: none;
+}
+.step-indicator li.active .step {
+    border-color: #4183d7;
+    color: #4183d7;
+}
+.step-indicator li.active .caption {
+    color: #4183d7;
+}
+.step-indicator li.complete:after {
+    background-color: #9ABCEA;
+}
+.step-indicator li.complete .step {
+    border-color: #9ABCEA;
+    color: #9ABCEA;
+}
+.step-indicator li.complete .caption {
+    color: #9ABCEA;
+}
+.step-indicator .step {
+    background-color: #fff;
+    border-radius: 50%;
+    color: #ccc;
+    font-size: 30px;
+    height: 64px;
+    line-height: 64px;
+    margin: 0 auto;
+    position: relative;
+    width: 75px;
+    z-index: 1;
+    text-align: center;
+}
+.step-indicator .step:hover {
+    cursor: pointer;
+}
+
+.step-indicator .caption {
+    color: #ccc;
+    padding: 11px 16px;
 }
 
 .card{
     /*background:linear-gradient(135deg, #0FF0B3 0%,#036ED9 100%);*/
-    background:linear-gradient(135deg, #17ead9 0%,#6078ea 100%);
+    background:linear-gradient(135deg, #6078ea 0%,#17ead9 100%);
     border-style: none;
 }
 
 .card-header{
-    background:#5161ce;
-    width: 100%;
+    background:linear-gradient(135deg, #5161ce 0%,#17ead9 100%);
 }
 
-.diagonale{
-    background-color: white;
-    background-image: -webkit-linear-gradient(-65deg, white 40%, #80ced6 60%);
-    min-height: 500px;
+/*calendarietto*/
+
+.attiva{
+    background-color: #FE2F20; /*ED6A5A  DE6B48*/
+    font-size: larger;
+}
+
+.attiva:hover{
+    cursor:pointer;
+    background-color: #FE675D; /*ED6A5A  DE6B48*/
+    font-size: larger;
+}
+
+
+.non-attiva{
+    cursor:default;
+    background-color: #E6F1E4;
+}
+
+.celle-scure{
+    background-color: #5161ce;
+    color: white;
+}
+
+.table{
+    border-color: #060723;
+    border-width: medium !important;
+}
+
+#back{
+    background-color: #5161ce;
+    color: white;
 }
 
 hr{
@@ -197,13 +297,3 @@ hr{
     width:80%;
     color:white;
 }
-
-.ben { color: #65799b; font-family: 'Helvetica Neue', sans-serif; font-weight: bold; letter-spacing: -1px; line-height: 1; }
-
-#graduate{
-    width:6.5%;
-}
-
-
-
-
